# usb-to-ps1-mouse-pro

./: .gitignore  LICENSE  README.md  autoflash.sh  build.sh  clean.sh  reformat.sh
doc/flashing-the-firmware/: README.md
docs/: flashing.html  index.html  keyboard.html
kicad/: README.md  sym-lib-table  usb2ps1mouse.kicad_pcb  usb2ps1mouse.kicad_prl  usb2ps1mouse.kicad_pro  usb2ps1mouse.kicad_sch  usb2ps1mouse_specific.kicad_sym
kicad/PS1.pretty/: Controller_THT90.kicad_mod
kicad/RP2040_Board.pretty/: RP2040-Zero.kicad_mod
kicad/old_rev/PCB_1/: RP2040_board.kicad_sym  fp-lib-table  usb2ps1mouse.kicad_pcb  usb2ps1mouse.kicad_prl  usb2ps1mouse.kicad_pro
kicad/old_rev/PCB_1/PS1.pretty/: Controller_THT90.kicad_mod
kicad/old_rev/PCB_2/: README.md  RP2040_board.kicad_sym
kicad/usb2ps1mouse-specific.pretty/: DSCON_pad.kicad_mod  L_combo.kicad_mod  USB_A_Sunken.kicad_mod
pico-pio-usb/src/: pio_usb_configuration.h
src/: CMakeLists.txt  autoflash.sh  autoflash_kb.sh  build.sh  clean.sh  get_deps.sh
src/pico-pio-usb/src/: pio_usb_host.c
src/usb-ps1-mouse/: CMakeLists.txt  main.c  main_kb.c  parsemouse.h  tusb_config.h  usb-ps1-adapter.c  usb-ps1-mouse.c  ws2812.c  ws2812.h  ws2812.pio.h
usb-ps1-mouse/: main.c  parsemouse.c
wiring/: README.md
